# virgo-plus

./: CMakeLists.txt  LICENSE  README.md
data/: SHA256_64.pws
lib/virgo/: CMakeLists.txt  polyCommit.hpp
lib/virgo/src/: CMakeLists.txt  RS_polynomial.cpp  RS_polynomial.h  constants.h  fft_circuit_GKR.cpp  fft_circuit_GKR.h  fieldElement.cpp  fieldElement.hpp  fri.cpp  fri.h  merkle_tree.cpp  merkle_tree.h  my_hhash.h  poly_commit.cpp  poly_commit.h  polynomial.cpp  polynomial.h  timer.cpp  timer.hpp  transcriptCache.hpp  typedef.hpp  utility.cpp  utility.h  vpd_prover.cpp  vpd_prover.h  vpd_verifier.cpp  vpd_verifier.h
script/: run.sh
src/: CMakeLists.txt  GKRProof.hpp  circuit.cpp  circuit.h  config_pc.hpp  inputCircuit.hpp  main.cpp  polynomial.cpp  polynomial.h  prover.cpp  prover.h  utils.cpp  utils.hpp  verifier.cpp  verifier.h
